objects/schema_object__c.object
<CustomObject>
    <fields>
        <fullName>last_date__c</fullName>
        <label>last date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone_number__c</fullName>
        <label>phone number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>schema object</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>schema object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>schema objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>